--- a/plugins/hyprland-window/Cargo.toml
+++ b/plugins/hyprland-window/Cargo.toml
@@ -13,6 +13,7 @@ abi_stable = "0.11.3"
 anyrun-plugin = "0.1.0"
 fuzzy-matcher = "0.3.7"
 json = "0.12.4"
+psutil = "3.2.2"
 ron = "0.8.1"
 serde = "1.0.192"
 serde_json = "1.0.108"
